[package]
name = "texted"
version = "1.1.1"
edition = "2021"
authors = ["Thiago Massari Guedes"]
license = "Apache-2.0"
homepage = "https://gitlab.com/thiagomg/texted"
repository = "https://gitlab.com/thiagomg/texted"
description = "A markdown blog platform that lets you in control of your data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
flate2 = "1.0.35"
tar = "0.4.43"

[dependencies]
ntex = { version = "2.8.0", features = ["tokio"] }
ntex-files = "2.0.0"
serde = { version = "1.0.215", features = ["derive"] }
ramhorns = "1.0.1"
lazy_static = { version = "1.5.0", features = [] }
regex = "1.11.1"
markdown = "1.0.0-alpha.21"
chrono = { version = "0.4.38", features = ["serde"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
whoami = "1.5.2"
clap = { version = "4.5.21", features = ["derive", "string"] }
dirs = "5.0.1"
serde_urlencoded = "0.7.1"
anyhow = "1.0.93"
spdlog-rs = "0.4.0"
flate2 = "1.0.35"
tar = "0.4.43"
unidecode = "0.3.0"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["time"] }
quick-xml = "0.37.0"
