[package]
name = "texted"
version = "1.2.1"
edition = "2021"
authors = ["Thiago Massari Guedes"]
license = "Apache-2.0"
homepage = "https://thiagocafe.com/"
repository = "https://github.com/thiagomg/texted"
description = "A markdown blog platform that lets you in control of your data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
flate2 = "1.1.1"
tar = "0.4.44"

[dependencies]
ntex = { version = "2.12.4", features = ["tokio"] }
ntex-files = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
ramhorns = "1.0.1"
lazy_static = { version = "1.5.0", features = [] }
regex = "1.11.1"
markdown = "1.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
toml = "0.8.22"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
whoami = "1.6.0"
clap = { version = "4.5.38", features = ["derive", "string"] }
dirs = "6.0.0"
serde_urlencoded = "0.7.1"
anyhow = "1.0.98"
spdlog-rs = "0.4.3"
flate2 = "1.1.1"
tar = "0.4.44"
unidecode = "0.3.0"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["time"] }
quick-xml = "0.37.5"

[profile.release]
lto = true
